--- a/style.css
+++ b/style.css
@@ -1,83 +1,53 @@
 body {
-    color: #3d4451;
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    background-color: #efefef;
-	margin:0 auto;
+  background: #efefef;
+  margin: 0;
 }
-
-.header {
-    position: relative;
-    margin-bottom: 75px;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-	margin-bottom: 40px;
-}
-.head-bg{
-	    height: 515px;
-		display: block;
-		top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-    display: black;
-    position: absolute;
-    background-size: cover;
-    background-color: #242832;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.head-bg:before {
-    background-color: rgba(44, 51, 64, 0.8);
-
-	content: '';
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
- 
-}
-
-
 a {
   color: inherit;
   text-decoration: none;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+hr{
+  height: 0;
+  border: none;
+  border-top: 1px solid #DEDEDE;
 }
 .clearfix::after {
   content: '';
   display: block;
   clear: both;
 }
-
-.topNavBar {
-  padding: 20px 16px 20px 16px;
-    z-index: 3;
-    background-color: transparent;
-    box-shadow: none;
-    opacity: 1;
-    visibility: visible;
-    -webkit-transform: translate(0, 0);
-    -moz-transform: translate(0, 0);
-    transform: translate(0, 0);
-    position: relative;
+main{
+  position: relative;
+  top: -21rem;
 }
-.topNavBar > nav {
+.topNavBar {
+  padding: 20px 0 20px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+.topNavBar-inner {
+  padding: 0 16px;
+}
+.topNavBar nav {
   padding-top: 7px;
 }
-.topNavBar > nav > ul {
+.topNavBar nav > ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.topNavBar > nav > ul > li {
+.topNavBar nav > ul > li {
   float: left;
   margin-left: 17px;
   margin-right: 17px;
 }
-.topNavBar > nav > ul > li > a {
+.topNavBar nav > ul > li > a {
   font-size: 12px;
   color: #b7b7b7;
   font-weight: bold;
@@ -87,7 +57,7 @@ a {
   padding-bottom: 5px;
   display: block;
 }
-.topNavBar > nav > ul > li > a:hover {
+.topNavBar nav > ul > li > a:hover {
   border-bottom: 3px solid #e06567;
 }
 
@@ -103,4 +73,92 @@ a {
 }
 .topNavBar .logo .card {
   color: #9a9da2;
+}
+.banner {
+  height: 515px;
+  background-image: url(./img/rs-cover.jpg);
+  background-position: center center;
+  background-size: cover;
+}
+.banner .mask {
+  height: 515px;
+  background-color:rgba(44, 51, 64, 0.8);
+}
+
+.userCard {
+  max-width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #ffffff;
+}
+.userCard .welcome {
+  background: #e6686a;
+  color: white;
+  display: inline-block;
+  padding: 4px 16px;
+  line-height: 22px;
+  position: relative;
+  margin-bottom: 10px;
+}
+.userCard .welcome .triangle {
+  display: block;
+  border: 10px solid transparent;
+  width: 0px;
+  border-left-color: #e6686a;
+  border-top-width: 0px;
+  position: absolute;
+  left: 4px;
+  top: 100%;
+}
+.userCard .picture {
+  float: left;
+}
+.userCard .text {
+  float: left;
+  margin-left: 65px;
+  width: 470px;
+}
+.userCard .text h1{
+  margin-top: 18px;
+}
+.userCard .text hr{
+  margin: 20px 0;
+}
+.userCard .pictureAndText {
+  padding: 50px;
+}
+.userCard dl dt,
+.userCard dl dd{
+  float: left;
+  padding: 5px 0;
+}
+.userCard dl dt{
+  width: 30%;
+  font-weight: bold;
+}
+.userCard dl dd{
+  width: 70%;
+  color: #9da0a7;
+}
+
+.userCard > footer.media{
+  background: #E6686A;
+  text-align: center;
+}
+.userCard > footer.media > a{
+  display: inline-block;
+  width: 50px;
+  line-height: 30px;
+  padding: 10px 0;
+  border-radius: 50%;
+  margin: 16px;
+}
+.userCard > footer.media > a:hover{
+  background: #CF5D5F;
+}
+.userCard svg{
+  width: 30px;
+  height: 30px; 
+  fill: white;
+  vertical-align: top;
 }
