update basic resume html

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ hr{
 }
 .banner {
   height: 515px;
-  background-image: url(./img/rs-cover.jpg);
+  background-image: url(./img/rs-cover1.jpg);
   background-position: center center;
   background-size: cover;
 }
