--- a/style.css
+++ b/style.css
@@ -450,3 +450,16 @@ section.portfolio .works > .small {
 .swiper-slide>img {
   width: 70%
 }
+#msgList{
+  border-top: 1px solid #b7b7b7;
+  width: 700px;
+  margin: 20px auto;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
+}
+#msgList>li{
+  box-sizing: border-box;
+  border-bottom: 1px solid #b7b7b7;
+  padding: 20px;
+}
