--- a/animate-resume/css/default.css
+++ b/animate-resume/css/default.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .token.selector{
     color:black;
 }
@@ -6,4 +12,8 @@
 }
 .token.function{
     color:black;
+}
+#code{
+    height: 100vh;
+    overflow: hidden;
 }
