--- a/style.css
+++ b/style.css
@@ -459,6 +459,48 @@ section.portfolio .works > .small {
   border-radius: 5px;
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
 }
+.input_control {
+  width: 360px;
+  margin: 20px auto;
+}
+
+input[type="text"],
+#btn1,
+#btn2 {
+  box-sizing: border-box;
+  text-align: center;
+  font-size: 1em;
+  height: 2.7em;
+  border-radius: 4px;
+  border: 1px solid #c8cccf;
+  color: #6a6f77;
+  -web-kit-appearance: none;
+  -moz-appearance: none;
+  display: block;
+  outline: 0;
+  padding: 0 1em;
+  text-decoration: none;
+  width: 100%;
+}
+
+input[type="text"]:focus {
+  border: 1px solid #299982;
+}
+
+#submit-btn {
+  font-size: 14px;
+  line-height: 16px;
+  padding: 15px 45px;
+  border: 1px solid #cdcfd1;
+  background: #fff;
+  display: inline-block;
+  border-radius: 2px;
+  color: #3d4451;
+  font-weight: bold;
+  margin: 10px 0;
+  cursor: pointer;
+  transition: box-shadow 0.2s;
+}
 #msgList>li{
   box-sizing: border-box;
   border-bottom: 1px solid #b7b7b7;
